--- a/day45/css/style.css
+++ b/day45/css/style.css
@@ -54,3 +54,35 @@ kbd {
   letter-spacing: .1rem;
   color: #ffc600;
 }
+
+/* FOOTER */
+footer {
+    width: 100%;
+    position: absolute;
+    z-index: 101;
+    bottom: 0;
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 0.96rem;
+}
+
+footer p {
+    color: rgba(250,250,250, 0.75);
+}
+
+footer a {
+    text-decoration: none;
+    color: rgba(250,250,250, 0.75);
+
+    -webkit-transition: all 0.5s; /* Safari */
+    transition: all 0.5;
+}
+
+
+footer a:hover {
+    color: rgba(85,26,139, 0.5);
+    border-bottom: 1px solid rgba(85,26,139, 0.5);
+
+    -webkit-transition: all 0.5s; /* Safari */
+    transition: all 0.5;
+}
