--- a/day48/css/master.css
+++ b/day48/css/master.css
@@ -1,11 +1,15 @@
 /*
   misc styles, nothing to do with CSS variables
 */
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 /* Declar CSS variables */
 :root {
   --base: #ffc600;
-  --spacing: 10px;
+  --spacing: 0;
   --blur: 1px;
   --grayscale: 0;
   --exposure: 100%;
@@ -17,7 +21,25 @@
   --opacity: 100%;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  font-size: 15px;
+}
+
+body {
+  text-align: center;
+  background: #fff;
+  color: white;
+  font-family: 'helvetica neue', sans-serif;
+  font-weight: 100;
+  font-size: 50px;
+}
+
 img{
+  width: 500px;
+  height: auto;
   padding: var(--spacing);
   background: var(--base);
   filter:
@@ -32,13 +54,30 @@ img{
    blur(var(--blur));
 }
 
-body {
-  text-align: center;
-  background: #193549;
-  color: white;
-  font-family: 'helvetica neue', sans-serif;
-  font-weight: 100;
-  font-size: 50px;
+input {
+  width: 250px;
+  margin-top: -10px;
+}
+
+#base {
+  width: 40px;
+  height: 30px;
+}
+
+label {
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 5px;
+}
+
+label:first-child{
+  margin-left: -65px;
+}
+
+h2 {
+  color: #222;
+  text-transform: uppercase;
 }
 
 .hl {
@@ -46,9 +85,40 @@ body {
 }
 
 .controls {
-  margin-bottom: 50px;
+  float: right;
+  /*margin-bottom: 50px;*/
+  width: 30%;
+  height: 100%;
 }
 
-input {
-  width:100px;
+.container {
+  margin: 4rem auto;
+  width: 70%;
+  height: 80%;
+  background-color: #F6F6F6;
+  color: #222;
+  box-shadow: 5px 5px 5px 5px #eaeaea;
+}
+
+.image {
+  float: left;
+  width: 70%;
+  height: 100%;
+}
+
+.image img {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.label-style {
+  margin-left: 40px;
+  padding: 0;
+  display: block;
+  text-align: left;
+}
+
+#first {
+  margin-top: 30px;
 }
