--- a/day48/css/master.css
+++ b/day48/css/master.css
@@ -55,7 +55,7 @@ img{
 }
 
 input {
-  width: 250px;
+  width: 180px;
   margin-top: -10px;
 }
 
@@ -72,7 +72,7 @@ label {
 }
 
 label:first-child{
-  margin-left: -65px;
+  /*margin-left: -65px;*/
 }
 
 h2 {
@@ -93,8 +93,8 @@ h2 {
 
 .container {
   margin: 4rem auto;
-  width: 70%;
-  height: 80%;
+  width: 900px;
+  height: 500px;
   background-color: #F6F6F6;
   color: #222;
   box-shadow: 5px 5px 5px 5px #eaeaea;
@@ -113,7 +113,7 @@ h2 {
 }
 
 .label-style {
-  margin-left: 40px;
+  margin-left: 25px;
   padding: 0;
   display: block;
   text-align: left;
