--- a/day49/css/master.css
+++ b/day49/css/master.css
@@ -84,3 +84,35 @@ button:hover, .selected {
   display: inline-block;
   width: 20%;
 }
+
+/* FOOTER */
+footer {
+    width: 100%;
+    position: absolute;
+    z-index: 101;
+    bottom: 0;
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 0.65rem;
+}
+
+footer p {
+    color: steelblue;
+}
+
+footer a {
+    text-decoration: none;
+    color: steelblue;
+
+    -webkit-transition: all 0.5s; /* Safari */
+    transition: all 0.5;
+}
+
+
+footer a:hover {
+    color: rgba(227, 227, 227, 0.5);
+    border-bottom: 1px solid rgba(227, 227, 227, 0.5);
+
+    -webkit-transition: all 0.5s; /* Safari */
+    transition: all 0.5;
+}
