--- a/day14/css/main.css
+++ b/day14/css/main.css
@@ -1,6 +1,13 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 body {
     text-align: center;
     background-color: #444;
+
+    transform-style: preserve-3d;
 }
 
 button {
@@ -11,7 +18,15 @@ button {
     font-size: 2em;
     background-color: #FFD21F;
     border: 0;
+    outline: none;
+
+    transition: all 0.05s;
 }
+
+button:hover {
+  margin-top: 402px;
+}
+
 img {
     text-align: center;
     width: 300px;
@@ -24,10 +39,13 @@ img {
     margin-top: 150px;
     text-align: center;
     border-radius: 50%;
+
+    transform-style: preserve-3d;
 }
 
 .coin > #front {
     position: absolute;
+    -webkit-transform-style: preserve-3d;
     -webkit-transform: perspective(600px) rotateX(0deg);
     -moz-transform: perspective(600px) rotateX(0deg);
     -o-transform: perspective(600px) rotateX(0deg);
@@ -48,6 +66,7 @@ img {
 
 .coin > #back {
     position: absolute;
+    -webkit-transform-style: preserve-3d;
     -webkit-perspective(600px) rotateX(270deg);
     -moz-perspective(600px) rotateX(270deg);
     -o-perspective(600px) rotateX(270deg);
@@ -104,10 +123,10 @@ img {
 
 footer {
     width: 100%;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     text-align: center;
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;*/
     color: #FFD21F;
     font-size: 0.8rem;
     font-family: Helvetica, Arial, sans-serif;
