--- a/day50/css/master.css
+++ b/day50/css/master.css
@@ -73,27 +73,51 @@ div {
   width: 50%;
   height: 300px;
   border: 1px solid #2B4049;
+  font-family: 'Source Code Pro', monospace;
+  color: #F4F4F4;
+  font-weight: 200;
+  font-size: 0.9rem;
+  /*overflow: auto;*/
 }
 
 .html {
   background-image: url("../img/html.svg");
   background-repeat: no-repeat;
-  background-position: 98% 5%;
-  background-size: 20px;
+  background-position: 95% 5%;
+  background-size: 25px;
+}
+
+textarea{
+  width: 99%;
+  height: 99%;
+  resize: none;
+  background-color: inherit;
+
+  font-family: 'Source Code Pro', monospace;
+  color: #F4F4F4;
+  font-weight: 200;
+  font-size: 0.9rem;
+  overflow: auto;
+  padding: 10px;
+  border: none;
+  padding-right: 55px;
+  padding-left: 25px;
+
+  outline: none;
 }
 
 .css {
   background-image: url("../img/css.svg");
   background-repeat: no-repeat;
-  background-position: 98% 5%;
-  background-size: 20px;
+  background-position: 95% 5%;
+  background-size: 25px;
 }
 
 .js {
   background-image: url("../img/js.svg");
   background-repeat: no-repeat;
-  background-position: 98% 5%;
-  background-size: 20px;
+  background-position: 95% 5%;
+  background-size: 25px;
 }
 
 @media only screen and (max-width: 470px) {
@@ -107,5 +131,15 @@ div {
 
   header h3 i {
     padding-left: 1.5rem;
+  }
+
+  div {
+    float: none;
+    width: 100%;
+    height: 400px;
+  }
+
+  body {
+    overflow: auto;
   }
 }
