--- a/day50/css/master.css
+++ b/day50/css/master.css
@@ -69,6 +69,7 @@ div:nth-of-type(3), div:nth-of-type(4){
 
 
 div {
+  position: relative;
   float: left;
   width: 50%;
   height: 300px;
@@ -87,7 +88,7 @@ div {
   background-size: 25px;
 }
 
-textarea{
+textarea, iframe{
   width: 99%;
   height: 99%;
   resize: none;
@@ -104,6 +105,12 @@ textarea{
   padding-left: 25px;
 
   outline: none;
+
+  transition: all 0.5s;
+}
+
+.changeBackground {
+  background-color: #eaeaea;
 }
 
 .css {
@@ -118,6 +125,16 @@ textarea{
   background-repeat: no-repeat;
   background-position: 95% 5%;
   background-size: 25px;
+}
+
+div.toggle {
+  position: absolute;
+  left: 88.7%;
+  top: -14%;
+  width: 25px;
+  height: 25px;
+  border: 1px solid red;
+  border-top: 1px solid red;
 }
 
 @media only screen and (max-width: 470px) {
