--- a/day52/css/master.css
+++ b/day52/css/master.css
@@ -174,6 +174,8 @@ footer a:hover {
   width: 150px;
   height: 2px;
   transform: rotate(90deg);
+
+  transition: all 0.5s;
 }
 
 .handelCircle {
@@ -184,4 +186,6 @@ footer a:hover {
   height: 20px;
   border-radius: 50%;
   background-color: #FC5757;
+
+  transition: all 0.5s;
 }
