--- a/day55/css/master.css
+++ b/day55/css/master.css
@@ -35,7 +35,7 @@ box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .data {
-  border: 1px solid red;
+  /*border: 1px solid red;*/
   width: 100%;
   height: 250px;
 }
@@ -80,4 +80,35 @@ box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   display: block;
   width: 100%;
   height: auto;
+}
+
+/* FOOTER */
+footer {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 0.6rem;
+}
+
+footer p {
+    color: #7394F4;
+}
+
+footer a {
+    text-decoration: none;
+    color: #7394F4;
+
+    -webkit-transition: all 0.5s; /* Safari */
+    transition: all 0.5;
+}
+
+
+footer a:hover {
+    color: #eaeaea;
+    border-bottom: 1px solid #eaeaea;
+
+    -webkit-transition: all 0.5s; /* Safari */
+    transition: all 0.5;
 }
