--- a/day55/css/master.css
+++ b/day55/css/master.css
@@ -37,7 +37,7 @@ box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 .data {
   /*border: 1px solid red;*/
   width: 100%;
-  height: 250px;
+  height: 230px;
 }
 
 .test-data{
@@ -80,6 +80,64 @@ box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   display: block;
   width: 100%;
   height: auto;
+}
+
+/* LIST DATA */
+.list {
+  /*border: 1px solid red;*/
+  width: 100%;
+  height: 250px;
+}
+
+.temp {
+  border-bottom: 1px solid #D5DDFC;
+  width: 90%;
+  margin: 0 auto;
+  height: 80px;
+}
+
+.temp:last-child {
+  border-bottom: none;
+}
+
+.time {
+  display: inline-block;
+  letter-spacing: 1px;
+  line-height: 90px;
+  font-size: 0.8rem;
+  color: #7394F4;
+  font-weight: 300;
+  padding-left: 20px;
+}
+
+.temprature {
+  letter-spacing: 1px;
+  color: #FDC64E;
+  font-size: 1.5rem;
+  line-height: 100px;
+  padding-right: 20px;
+  padding-left: 90px;
+}
+
+.first-temp {
+  padding-left: 110px;
+  font-size: 3rem;
+}
+
+.sub-img {
+  position: relative;
+  top: 17px;
+  left: 7px;
+  width: 50px;
+  height: 50px;
+}
+
+.yellow {
+  color: #FDC64E;
+}
+
+.blue {
+  color: #1E6189;
 }
 
 /* FOOTER */
