--- a/day62/css/master.css
+++ b/day62/css/master.css
@@ -18,57 +18,135 @@ body {
   font-family: Helvetica, Arial, sans-serif;
 }
 
+h1 {
+  margin-top: 3rem;
+  width: 350px;
+  background-color: #E46C6F;
+  font-size: 200%;
+  font-weight: 300;
+  text-transform: uppercase;
+  padding: 1rem;
+  letter-spacing: 10px;
+
+}
+
 /* WRAPPER STYLES */
 .wrapper {
-  margin: 9.375rem auto;
+  margin: 10.375rem auto 0;
   position: relative;
-  max-width: 600px;
+  max-width: 900px;
   width: 80%;
   height: 100%;
   text-align: center;
   background-color: #121212;
   overflow: auto;
+  font-family: 'Helvetica', Arial, sans-serif;
 }
 
 /* PIANO BOARD STYLING */
 .white-keys {
+  position: relative;
   background-color: #fefefe;
   border: 1px solid #222;
   width: 7.142857143%;
-  height: 15.625rem;
+  height: 17.625rem;
+  float: left;
+
   -webkit-transition: all 0.35s;
   transition: all 0.35s;
-  float: left;
+
+}
+.white-keys span {
+  display: block;
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 10px;
+  color: #ededed;
 }
 
-.white-keys:hover {
+.white-keys-clicked {
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+
   border-bottom: 3px solid #121212;
   border-right: 2px solid #121212;
   -webkit-box-shadow: inset 0 0 10px #111;
           box-shadow: inset 0 0 10px #111;
+  -webkit-transform: scale(0.99);
+          transform: scale(0.99);
 }
 
 .black-keys {
   background-color: #242529;
   width: 5.238095238%;
-  height: 7.8125rem;
+  height:9.8125rem;
   position: absolute;
   left: 4.838095238%;
+  border: 3px solid #37373a;
   border-bottom: 6px solid #000;
-  border-left: 3px solid #37373a;
+
   -webkit-transition: all 0.35s;
   transition: all 0.35s;
 }
 
-.black-keys:nth-of-type(1) {
-  background: red;
+.black-keys span {
+  display: block;
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 10px;
+  font-size: 90%;
+}
+
+.two{
+  left: 11.838095238%;
+}
+
+.three {
+  left: 25.838095238%;
+}
+
+.four {
+  left: 32.838095238%;
+}
+
+.five {
+  left: 39.838095238%;
+}
+
+.six {
+  left: 53.838095238%;
+}
+
+.seven {
+  left: 60.838095238%;
+}
+
+.eight {
+  left: 74.838095238%;
+}
+
+.nine {
+  left: 81.838095238%;
+}
+
+.ten {
+  left: 88.838095238%;
 }
 
 .black-keys-clicked {
-  /*-webkit-box-shadow: inset 0 0 10px #000;
-          box-shadow: inset 0 0 10px #000;*/
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+
   border-bottom: 2px solid #000;
   border-left: 2px solid #37373a;
+  border-right: 2px solid #37373a;
+  border-top: none;
+  -webkit-box-shadow: inset 0 0 10px #000;
+          box-shadow: inset 0 0 10px #000;
+  -webkit-transform: scale(0.99);
+          transform: scale(0.99);
 }
 
 /* FOOTER STYLING */
@@ -87,16 +165,14 @@ footer a {
     text-decoration: none;
     color: inherit;
 
-    -webkit-transition: all 0.5s; /* Safari */
-    -webkit-transition: all 0.5;
-    transition: all 0.5;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
 }
 
 footer a:hover {
     color: #E46C6F;
     border-bottom: 1px solid #E46C6F;
 
-    -webkit-transition: all 0.5s; /* Safari */
-    -webkit-transition: all 0.5;
-    transition: all 0.5;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
 }
