--- a/day40/css/gallary.css
+++ b/day40/css/gallary.css
@@ -8,6 +8,7 @@ html, body {
   color: #eee;
   background: #130c22;
   height: 500px;
+
 }
 
 
@@ -17,6 +18,13 @@ p {
 }
 
 /* heading styling */
+
+/* ----- HEADINGS ------ */
+h1, h2, h3 {
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
 h1 {
  text-transform: uppercase;
  width: 60%;
@@ -25,6 +33,36 @@ h1 {
 h4 {
   font-size: 1em;
   font-weight: 100;
+}
+
+/* ----- H4 long copy ------ */
+h4.long-copy {
+  font-size: 120%;
+  line-height: 145%;
+  width: 70%;
+  margin-left: 15%;
+  margin-bottom: 10%;
+}
+
+/* h2 styling */
+h2.year {
+  font-size: 190%;
+  word-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+  color: #130c22;
+}
+
+h2.year:after {
+  display: block;
+  margin: 0 auto;
+  margin-top: 30px;
+  height: 3px;
+  background-color: #130c22;
+  content: " ";
+  width: 100px;
+
 }
 
 hr {
@@ -77,7 +115,9 @@ canvas {
 }
 
 #info {
+  margin: auto;
   margin-top: -50px;
+  max-width: 950px;
 }
 
 
@@ -109,9 +149,29 @@ ul.bottom-links li i {
     color: #333;
 }
 
+@media screen and (min-width: 1500px) {
+    #info {
+      margin-top: -180px;
+    }
+}
+
+@media screen and (max-width: 1100px), screen and (min-width: 710px) {
+    #info {
+        margin-top: -90px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #info {
+      width: 100%;
+      margin-top: -20px;
+    }
+}
+
 @media screen and (max-width: 400px) {
   #info {
     width: 100%;
+    margin-top: -10px;
   }
 
   p {
