--- a/day40/css/master.css
+++ b/day40/css/master.css
@@ -1,3 +1,7 @@
+.white-space {
+  margin: 10rem 0; 
+}
+
 .data {
   position: relative;
 }
@@ -7,13 +11,13 @@
     font-size: 900%;
     font-weight: 700;
     padding-left: 0.5em;
-    line-height: 2.9em;
+    /* line-height: 2.9em; */
     color: rgba(0, 0, 0, 0.5);
+
     position:absolute;
     width:100%; height:100%;
     top:0; left:0;
     background:rgba(255,255,255,0.6);
-    /*opacity:0;*/
     transition: all 0.5s;
     -webkit-transition: all 0.5s;
 
