--- a/day64/css/style.css
+++ b/day64/css/style.css
@@ -14,12 +14,12 @@ body {
     position: relative;
     background-color: #3A178D;
     font-size: 16px;
-    font-family: Helvetical, sans-serif;
+    font-family: Helvetica, sans-serif;
 }
 
 div {
     display: inline-block;
-    float: left;
+    /* float: left; */
 }
 
 img {
@@ -56,12 +56,14 @@ img {
 
 /* CONTAINER STYLE */
 .container{
-    /* position: absolute;
+    position: absolute;
     top: 50%;
-    transform: translateY(-50%); */
-    /* display: flex;
-    flex-direction: row;
-    align-items: center; */
+    transform: translateY(-50%);
+    width: 100%;
+    height: 100vh;
+    /* float: none; */
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 
@@ -75,6 +77,7 @@ img {
     margin: 0;
     background: #fff;
     margin: 20px;
+    box-shadow: 0 6px 6px #2C106F;
 }
 
 .image-container {
@@ -82,6 +85,18 @@ img {
     height: 295px;
     background: #ccc;
     object-fit: contain;
+    overflow: hidden;
+}
+
+.imageShowcase {
+    transform: scale(1.25);
+    filter: grayscale(80%);
+    transition: all 0.5s;
+}
+
+.card:hover .imageShowcase {
+    transform: scale(1);
+    filter: grayscale(0);
 }
 
 .icon-set {
