--- a/day64/css/style.css
+++ b/day64/css/style.css
@@ -16,6 +16,7 @@ body {
     background-color: #3A178D;
     font-size: 16px;
     font-family: Helvetica, sans-serif;
+    transition: all .5s;
 }
 
 div {
@@ -30,7 +31,7 @@ img {
 /* HEADER TITLE STYLE  */
 .header {
     width: 350px;
-    margin: 2rem 1rem;
+    margin: 6rem 1rem;
     display: inline-block;
 }
 
@@ -55,12 +56,19 @@ img {
 #app {
     width: 100%;
     height: 300px;
-    /* margin: 50px; */
-    position: absolute;
+    position: relative;
     top: 25vh;
 }
 
 .container{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    padding: 20px;
+}
+
+.cardsSlideshow {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -198,4 +206,22 @@ footer a {
 
 footer a:hover {
     color: #B8A2EB;
+}
+
+
+ /* Media Query */
+
+@media only screen and (max-width: 730px) {
+    #app {
+        top: 5vh;
+    }
+
+    .container {
+        display: block;
+    }
+
+    .cardsSlideshow {
+        position: relative;
+        top: -8%;
+    }
 }
