--- a/day67/css/master.css
+++ b/day67/css/master.css
@@ -9,6 +9,15 @@
 
  */
 
+
+ :root {
+   --darkBlue: #293368;
+   --lightGray: #F9F9F9;
+   --lightGreen: #A9DCD4;
+   --darkGreen: #77C2BB;
+   --purple: #8D8FE9;
+ }
+
 * {
   margin: 0;
   padding: 0;
@@ -25,11 +34,11 @@ html, body {
 }
 
 header {
-  background-color: #F9F9F9;
+  background-color: var(--lightGray);
   width: 100%;
   height: 30%;
   padding: 10%;
-  color: #293368;
+  color: var(--darkBlue);
 }
 
 h1 {
@@ -42,13 +51,13 @@ h3 {
   font-weight: lighter;
   margin: 95px 0;
   letter-spacing: 1px;
-  color: #293368;
+  color: var(--darkBlue);
   font-size: 1.6rem;
 }
 
 .css-title {
   font-weight: normal;
-  color: #A9DCD4;
+  color: var(--lightGreen);
 }
 
 .btn-container {
@@ -72,18 +81,18 @@ h3 {
 
 .btn-light-green {
   margin-left: 0;
-  border-color: #A9DCD4;
-  color: #A9DCD4;
+  border-color: var(--lightGreen);
+  color:var(--lightGreen);
 }
 
 .btn-dark-green {
-  border-color: #77C2BB;
-  color: #77C2BB;
+  border-color: var(--darkGreen);
+  color: var(--darkGreen);
 }
 
 .btn-purple {
-  border-color: #8D8FE9;
-  color: #8D8FE9;
+  border-color: var(--purple);
+  color: var(--purple);
 }
 
 footer {
@@ -94,17 +103,17 @@ footer {
   text-align: center;
   letter-spacing: 1px;
   font-weight: lighter;
-  color: #293368;
+  color: var(--darkBlue);
 }
 
 .footer-links a {
   text-decoration: none;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
-  color: #293368;
+  color: var(--darkBlue);
 }
 
 .footer-links a:hover {
-  color: #77C2BB;
+  color: var(--darkGreen);
   font-weight: 400;
 }
