--- a/day68/css/master.css
+++ b/day68/css/master.css
@@ -35,18 +35,21 @@
     font-size: 10px;
     font-family: 'Roboto', sans-serif;
     background-color: var(--bg);
+    overflow-x: hidden;
  }
 
  body {
+     position: relative;
      width: 80%;
-     height: 100%;
-     margin: auto;
+     height: 90%;
+     margin: 5% auto;
  }
 
 header {
     position: relative;
     width: 100%;
     height: 28%;
+    padding: 12rem 0;
 }
 
 h1 {
@@ -57,8 +60,7 @@ h1 {
     color: var(--light-blue);
     letter-spacing: 1px;
     font-size: 3.5rem;
-    line-height: 12rem;
-    padding: 12rem 0;
+    line-height: 1.5;
     word-spacing: 8px;
 }
 
@@ -72,23 +74,25 @@ h1 {
     display: block;
     position: absolute;
     right: 0;
-    padding: 16rem 0;
+    top: 43%;
+    transform: scale(.8);
     transform-origin: center;
 }
 
 section {
     position: relative;
     width: 100%;
-    border: 1px solid red;
+    height: 100%;
 }
 
 .card {
+    float: left;
     position: relative;
     bottom: 0;
-    display: inline-block;
     width: 300px;
     height: 456px;
     margin-right: 40px;
+    margin-bottom: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 8px var(--shadow);
 }
@@ -132,6 +136,7 @@ hr {
 }
 
 .btn {
+    cursor: pointer;
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -154,14 +159,15 @@ hr {
     padding: 7%;
 }
 
-footer {
-  width: 100%;
-  position: absolute;
-  bottom: 2%;
-  background-color: red;
+.footer {
+  position: relative;
+  clear: both;
+  bottom: 0;
+  left: auto;
+  right: auto;
 }
 
-footer p {
+.footer p {
     text-align: center;
     letter-spacing: 1px;
     color: var(--light-blue);
